# Argos

./: .gitignore  README.md  ROADMAP.md  demo.py  demo_mcp.py  demo_report.csv  demo_report.txt  mcp_report.txt  pyproject.toml  requirements.txt  run.ps1  run.sh
argos/: __init__.py
argos/api/: __init__.py  dashboard.py  main.py
argos/component_analyzer/: __init__.py  analyzer.py  owasp_mcp.py
argos/core/: __init__.py  models.py  taxonomies.py
argos/fingerprint_db/: __init__.py  database.py  embeddings.py
argos/interaction_analyzer/: __init__.py  detector.py
data/: __init__.py  download.py  seed.py
data/catalogs/: owasp_mcp_top10.json
data/datasets/: sample_attacks.json
examples/: vulnerable_mcp_server.py
tests/: test_component_analyzer.py  test_core.py  test_fingerprint.py
