[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "Collaborative reputation & threat intelligence for the AI agent ecosystem (MCP servers & LLMs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "ARGOS Team" }]

# Runtime deps are listed in requirements.txt for this early-stage repo.
# They are mirrored here loosely so `pip install -e .` works too.
dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.6", "transformers>=4.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["argos*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
