[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "argos"
version = "0.1.0"
description = "Reputación e inteligencia de amenazas para el ecosistema de agentes de IA (servidores MCP y LLMs)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "TBD" }
authors = [{ name = "ARGOS Team" }]

# Las deps de ejecución están en requirements.txt; se reflejan aquí de forma laxa
# para que `pip install -e .` también funcione.
dependencies = [
    "pydantic>=2.6,<3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.6", "transformers>=4.40"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["argos*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
